--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,7 @@
         <section class="food-part">
             <h2>Restaurants</h2>
             <article class="card">
-                <a href="#">
+                <a href="../html/restau1.html">
                     <img src="../img/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                     <span class="new">Nouveau</span>
                     <div class="food-info">
@@ -93,7 +93,7 @@
                 </a>
             </article>
             <article class="card">
-                <a href="restaurant2.html">
+                <a href="../html/restau2.html">
                     <img src="../img/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                     <span class="new">Nouveau</span>
                     <div class="food-info">
@@ -134,7 +134,7 @@
                 </a>
             </article>
             <article class="card">
-                <a href="restaurant1.html">
+                <a href="../html/restau3.html">
                     <img src="../img/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                     <div class="food-info">
                         <div class="part-name">
@@ -174,7 +174,7 @@
                 </a>
             </article>
             <article class="card">
-                <a href="restaurant4.html">
+                <a href="../html/restau4.html">
                     <img src="../img/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                     <div class="food-info">
                         <div class="part-name">
@@ -184,11 +184,11 @@
                         <div class="heart">
                             <svg class="heart-classic" viewBox="-20 0 550 550"  xml:space="preserve">
                                 <path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
-                                         c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
-                                         c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
-                                         s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
-                                         C512,93.417,453.532,30,376,30z"/>
-                              <defs>
+                                            c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                            c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                            s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                            C512,93.417,453.532,30,376,30z"/>
+                                <defs>
                                 <linearGradient id="text-fill">
                                       <stop offset="0%" stop-color="#9356DC" />
                                       <stop offset="100%" stop-color="#FF79DA" />
