--- a/html/restau1.html
+++ b/html/restau1.html
@@ -5,54 +5,59 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/0faa74c727.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/restau.css">
         <title>La palette du gout</title>
     </head>
     <body>
+        <!--header-->
         <header>
             <div>
                 <div class="logo-back">
                     <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
                 </div>
                 <div class="title">
-                    <h1>ohmyfood</h1>
+                    <img src="../img/images/logo/ohmyfood@2x.svg" alt="logo" class="logo">
                 </div>
             </div>
         </header>
+        <!-- main -->
         <main>
             <img src="../img/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du gout" class="img-back">
             <div class="meal-list">
                 <h1 class="restau-name">La palette du gout</h1>
+                <!-- coeur -->
                 <div class="heart-part">
                     <svg class="heart-classic" viewBox="-20 0 550 550"  xml:space="preserve">
                         <path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
-                                 c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
-                                 c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
-                                 s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
-                                 C512,93.417,453.532,30,376,30z"/>
-                      <defs>
+                                    c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                    c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                    s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                    C512,93.417,453.532,30,376,30z"/>
+                        <defs>
                         <linearGradient id="text-fill">
-                              <stop offset="0%" stop-color="#9356DC" />
-                              <stop offset="100%" stop-color="#FF79DA" />
+                                <stop offset="0%" stop-color="#9356DC" />
+                                <stop offset="100%" stop-color="#FF79DA" />
                         </linearGradient>
-                      </defs>                                   
+                        </defs>                                   
                     </svg>
             
                     <svg class="heart-pink" viewBox="-20 0 550 550"  xml:space="preserve">
                         <path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
-                                 c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
-                                 c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
-                                 s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
-                                 C512,93.417,453.532,30,376,30z"/>
-                      <defs>
+                                    c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                    c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                    s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                    C512,93.417,453.532,30,376,30z"/>
+                        <defs>
                         <linearGradient>
-                              <stop offset="0%" stop-color="#9356DC" />
-                              <stop offset="100%" stop-color="#FF79DA" />
+                                <stop offset="0%" stop-color="#9356DC" />
+                                <stop offset="100%" stop-color="#FF79DA" />
                         </linearGradient>
-                      </defs>                                   
+                        </defs>                                   
                     </svg>
                 </div>
             </div>
+            <!-- Menu -->
             <form class="meal-choice">
                 <fieldset class="food-title">
                     <div class="entree-div">
@@ -172,11 +177,10 @@
                     </div>
                 </fieldset>
             </form>
-
+            <!-- footer-->
             <footer>
-                <!-- footer -->
+                <h1><a href="#">ohmyfood</a></h1>
                 <div class="footer">
-                    <h1><a href="#">ohmyfood</a></h1>    
                     <p>
                         <i class="fa-solid fa-utensils"></i>
                         Proposer un restaurant
@@ -189,8 +193,8 @@
                     <p>
                         <a href="mailto:contact@ofmyfood.com">Contact</a>
                     </p>
-                </div>
-            </footer>
+                </div>   
+            </footer> 
         </main>
     </body>
 </html>
