--- a/html/restau3.html
+++ b/html/restau3.html
@@ -5,59 +5,62 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/0faa74c727.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/restau.css">
         <title>A la française</title>
     </head>
     <body>
+        <!-- header-->
         <header>
             <div>
                 <div class="logo">
                     <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
                 </div>
                 <div class="title">
-                    <h1>ohmyfood</h1>
+                    <img src="../img/images/logo/ohmyfood@2x.svg" alt="logo" class="logo">
                 </div>
             </div>
         </header>
+        <!--main-->
         <main>
             <img src="../img/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="a la française" class="img-back">
             <div class="meal-list">
                 <h1 class="restau-name">À la française</h1>
+                <!-- coeur-->
                 <div class="heart-part">
                     <svg class="heart-classic" viewBox="-20 0 550 550"  xml:space="preserve">
                         <path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
-                                 c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
-                                 c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
-                                 s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
-                                 C512,93.417,453.532,30,376,30z"/>
-                      <defs>
+                                    c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                    c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                    s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                    C512,93.417,453.532,30,376,30z"/>
+                        <defs>
                         <linearGradient id="text-fill">
-                              <stop offset="0%" stop-color="#9356DC" />
-                              <stop offset="100%" stop-color="#FF79DA" />
+                                <stop offset="0%" stop-color="#9356DC" />
+                                <stop offset="100%" stop-color="#FF79DA" />
                         </linearGradient>
-                      </defs>                                   
+                        </defs>                                   
                     </svg>
-            
                     <svg class="heart-pink" viewBox="-20 0 550 550"  xml:space="preserve">
                         <path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
-                                 c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
-                                 c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
-                                 s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
-                                 C512,93.417,453.532,30,376,30z"/>
-                      <defs>
+                                    c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                    c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                    s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                    C512,93.417,453.532,30,376,30z"/>
+                        <defs>
                         <linearGradient>
-                              <stop offset="0%" stop-color="#9356DC" />
-                              <stop offset="100%" stop-color="#FF79DA" />
+                                <stop offset="0%" stop-color="#9356DC" />
+                                <stop offset="100%" stop-color="#FF79DA" />
                         </linearGradient>
-                      </defs>                                   
+                        </defs>                                   
                     </svg>
                 </div>
             </div>
+            <!-- menu -->
             <form class="meal-choice">
                 <fieldset class="food-title">
                     <div class="entree-div">
                         <h3><span>entrées</span></h3> 
-
                         <article class="menu-part" id="art-1">
                             <div class="text-part">
                                 <h4>Tarte de pouple acidulé</h4>
@@ -68,7 +71,6 @@
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </article>
-
                         <article class="menu-part" id="art-2">
                             <div class="text-part">
                                 <h4>Velouté de légumes d'antan</h4>
@@ -79,7 +81,6 @@
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </article>
-
                         <article class="menu-part" id="art-3">
                             <div class="text-part">
                                 <h4>Soupe à l'oignon</h4>
@@ -90,11 +91,9 @@
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </article>
-
                     </div>
                     <div class="meal">
                         <h3><span>Plats</span></h3>
-
                         <article class="menu-part" id="art-4">
                             <div class="text-part">
                                 <h4>Coquilles Saint-Jacques</h4>
@@ -105,7 +104,6 @@
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </article>
-
                         <article class="menu-part"  id="art-5">
                             <div class="text-part">
                                 <h4>Magret de canard</h4>
@@ -116,7 +114,6 @@
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </article>
-
                         <article class="menu-part"  id="art-6">
                             <div class="text-part">
                                 <h4>Pigeonneau d'Ille-et-Vilaine</h4>
@@ -128,10 +125,8 @@
                             </div>
                         </article>
                     </div>
-
                     <div class="last-food">
                         <h3><span>Desserts</span></h3>
-
                         <article class="menu-part"  id="art-7">
                             <div class="text-part">
                                 <h4>Pétales de violettes glacés</h4>
@@ -142,7 +137,6 @@
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </article>
-
                         <article class="menu-part"  id="art-8">
                             <div class="text-part">
                                 <h4>Fondant au chocolat</h4>
@@ -153,7 +147,6 @@
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </article>
-
                         <article class="menu-part"  id="art-9">
                             <div class="text-part">
                                 <h4>Millefeuille croustillant</h4>
@@ -164,15 +157,13 @@
                                 <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </article>
-
                     </div>
-
+                    <!-- bouton commander-->
                     <div class="order">
                         <label>Commander</label>
                     </div>
                 </fieldset>
             </form>
-
             <footer>
                 <!-- footer -->
                 <div class="footer">
