--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-</head>
 <body>
     <header>
         <!--Loader-->
@@ -79,7 +78,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient id="text-fill">
+                                <linearGradient class="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -120,7 +119,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                     <defs>
-                                <linearGradient id="text-fill">
+                                <linearGradient class="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -160,7 +159,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient id="text-fill">
+                                <linearGradient class="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -200,7 +199,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient id="text-fill">
+                                <linearGradient class="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -214,7 +213,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient>
+                                <linearGradient class="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -222,7 +221,6 @@
                             </svg>
                         </div>
                         </div>
-                    </div>
                 </a>
             </article>
         </section>
