--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient class="text-fill">
+                                <linearGradient id="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -119,7 +119,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                     <defs>
-                                <linearGradient class="text-fill">
+                                <linearGradient id="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -159,7 +159,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient class="text-fill">
+                                <linearGradient id="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -199,7 +199,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient class="text-fill">
+                                <linearGradient id="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -213,7 +213,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient class="text-fill">
+                                <linearGradient id="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
