--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient>
+                                <linearGradient id="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -133,7 +133,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient>
+                                <linearGradient id="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
@@ -173,7 +173,7 @@
                                             s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
                                             C512,93.417,453.532,30,376,30z"/>
                                 <defs>
-                                <linearGradient>
+                                <linearGradient id="text-fill">
                                         <stop offset="0%" stop-color="#9356DC" />
                                         <stop offset="100%" stop-color="#FF79DA" />
                                 </linearGradient>
